--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -62,8 +62,6 @@ section.user_info {
   border-radius: 50%;
 }
 
-/* Users edit */
-
 .gravatar_edit {
   margin: 15px auto;
   text-align: center;
@@ -71,3 +69,33 @@ section.user_info {
     float: none;
     max-width: 100px;
   }
+}
+
+.stats {
+  overflow: auto;
+  margin-top: 0;
+  padding: 0;
+  a {
+    float: left;
+    padding: 0 10px;
+    text-align: center;
+    width: 33%;
+    border-left: 1px solid #eee;
+    color: #33383c;
+    &:first-child {
+      padding-left: 0;
+      border: 0;
+    }
+    &:hover {
+      text-decoration: none;
+      color: #337ab7;
+    }
+  }
+  strong {
+    display: block;
+    font-size: 1.2em;
+    color: black;
+  }
+}
+
+
